examples/test/testpolicy10753.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10753
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key10: value3
      key25: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value47
          key31: value46
      podSelector:
        matchLabels:
          key29: value47
          key14: value31
